--- a/assets/package.json
+++ b/assets/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
+    "@tailwindcss/forms": "^0.3.3",
     "@tailwindcss/typography": "^0.4.1",
     "autoprefixer": "^10.3.1",
     "babel-loader": "^8.0.0",
