--- a/assets/package.json
+++ b/assets/package.json
@@ -17,6 +17,7 @@
     "@babel/preset-env": "^7.0.0",
     "@tailwindcss/forms": "^0.3.3",
     "@tailwindcss/typography": "^0.4.1",
+    "alpinejs": "^3.2.3",
     "autoprefixer": "^10.3.1",
     "babel-loader": "^8.0.0",
     "copy-webpack-plugin": "^5.1.1",
