--- a/assets/package.json
+++ b/assets/package.json
@@ -23,6 +23,7 @@
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.2",
     "hard-source-webpack-plugin": "^0.13.1",
+    "interactjs": "^1.10.11",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.1",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
